discussion/kv_engine/187787/187787_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge commit neo/8d301c5af into master

* commit '8d301c5af':
  MB-55199: Sort magma pendingRequests into key and ascending seqno order

Change-Id: I35d33b5d48fe39e0b2648c90872dca8ac2f98b99

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2023-03-06 15:45:22.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-06 15:57:15.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52296/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52296/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22846/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:867:56: error: no member named "c_str" in "StoredDocKeyT<std::allocator>" [clang-diagnostic-error]
        EXPECT_EQ(itr->second, req->getItem().getKey().c_str());
                                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2044:69: note: expanded from macro "EXPECT_EQ"
  EXPECT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:164:40: note: expanded from macro "EXPECT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_NONFATAL_FAILURE_)
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:149:43: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22846/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:867:56:
error: no member named "c_str" in "StoredDocKeyT<std::allocator>" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22846/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1645/ : FAILURE

Compile error at [2023-03-06T15:49:08.463Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:867:56:
error: ?const StoredDocKey? {aka ?const class StoredDocKeyT<std::allocator>?} has no member named ?c_str?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1645/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12578/ : FAILURE

Compile error at [2023-03-06T15:47:39.780Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:867:56:
error: no member named "c_str" in "StoredDocKeyT<std::allocator>"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12578/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24479/ : FAILURE

Compile error at [2023-03-06T15:56:23.313Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:867:56:
error: no member named "c_str" in "StoredDocKeyT<std::allocator>"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24479/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26219/ : FAILURE

Compile error at [2023-03-06T15:47:11.605Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:867:56:
error: no member named "c_str" in "StoredDocKeyT<std::allocator>"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26219/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33325/ : FAILURE

Compile error at [2023-03-06T15:48:10.600Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:867:56:
error: no member named "c_str" in "StoredDocKeyT<std::allocator>"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33325/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25366/ : FAILURE

Compile error at [2023-03-06T15:50:03.819Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:867:56:
error: ?const StoredDocKey? {aka ?const class StoredDocKeyT<std::allocator>?} has no member named ?c_str?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25366/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12658/ : FAILURE

Compile error at [2023-03-06T15:55:37.947Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:867:56:
error: ?const StoredDocKey? {aka ?const class StoredDocKeyT<std::allocator>?} has no member named ?c_str?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12658/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43863/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23069/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24908/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
